--- a/AcquaSense React/src/pages/login/loginerrorobot/report.html
+++ b/AcquaSense React/src/pages/login/loginerrorobot/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,16050],[],[[4,0,0,[],[1,316,15735],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,12035],[],[[4,0,0,[],[1,256,11777],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TestThemeToggle","*C:\\Users\\lucas\\OneDrive\\Documentos\\FACULDADE\\4 semestre\\Projeto aplic plataforma web\\AcquaSense\\AcquaSense React\\src\\components\\AcquaNav\\TestThemeToggle.robot","*TestThemeToggle.robot","*Teste Alternar Tema"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Login Erro","*C:\\Users\\lucas\\OneDrive\\Documentos\\FACULDADE\\4 semestre\\Projeto aplic plataforma web\\AcquaSense\\AcquaSense React\\src\\pages\\login\\loginerrorobot\\login_erro.robot","*login_erro.robot","*Teste de Login com Email Inválido"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:16","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:16","fail":0,"id":"s1","label":"TestThemeToggle","name":"TestThemeToggle","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:12","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:12","fail":0,"id":"s1","label":"Login Erro","name":"Login Erro","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1731710800321;
+window.output["baseMillis"] = 1731712670611;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 16080;
+window.output["generated"] = 12051;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
