--- a/AcquaSense React/src/pages/login/report.html
+++ b/AcquaSense React/src/pages/login/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,16050],[],[[4,0,0,[],[1,316,15735],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,16338],[],[[4,0,0,[],[1,304,16033],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TestThemeToggle","*C:\\Users\\lucas\\OneDrive\\Documentos\\FACULDADE\\4 semestre\\Projeto aplic plataforma web\\AcquaSense\\AcquaSense React\\src\\components\\AcquaNav\\TestThemeToggle.robot","*TestThemeToggle.robot","*Teste Alternar Tema"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Login Test","*C:\\Users\\lucas\\OneDrive\\Documentos\\FACULDADE\\4 semestre\\Projeto aplic plataforma web\\AcquaSense\\AcquaSense React\\src\\pages\\login\\login_test.robot","*login_test.robot","*Teste de Pesquisa Funcional"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:16","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:16","fail":0,"id":"s1","label":"TestThemeToggle","name":"TestThemeToggle","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:16","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:16","fail":0,"id":"s1","label":"Login Test","name":"Login Test","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1731710800321;
+window.output["baseMillis"] = 1731715391391;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 16080;
+window.output["generated"] = 16380;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
