--- a/testes/report.html
+++ b/testes/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,29463],[],[[4,0,0,[],[1,314,29147],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,45864],[],[[4,0,0,[],[1,297,24859],[]],[5,0,0,[],[1,25156,20698],[]]],[],[2,2,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*consumoDadosInvalidos","*C:\\Users\\Usuario\\AcquaSense\\testes\\consumoDadosInvalidos.robot","*consumoDadosInvalidos.robot","*Cenário 1: Inicializando o Hive MQ"]);
+window.output["strings"] = window.output["strings"].concat(["*","*consumoDiario","*C:\\Users\\Usuario\\AcquaSense\\testes\\consumoDiario.robot","*consumoDiario.robot","*Cenário 1: Inicializando o Hive MQ","*Cenário 2: Visualizando dados no acquasense"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:29","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:29","fail":0,"id":"s1","label":"consumoDadosInvalidos","name":"consumoDadosInvalidos","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:46","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:00:46","fail":0,"id":"s1","label":"consumoDiario","name":"consumoDiario","pass":2,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1733105710857;
+window.output["baseMillis"] = 1733190080884;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 29488;
+window.output["generated"] = 45890;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
